# Blog

./: .dockerignore  .env-example  Dockerfile  docker-compose.yml  pyproject.toml
server/: asgi.py  urls.py  wsgi.py
server/apps/blog/: urls.py
server/apps/blog/admin/: article.py
server/apps/blog/logic/: index.py
server/apps/blog/migrations/: 0001_initial.py  0002_articleimage.py  0003_article_created_at_article_updated_at_and_more.py
server/apps/blog/models/: __init__.py  article.py
server/apps/blog/templates/blog/: article_detail.html  article_test.html  greeting.html  index.html
server/settings/: __init__.py
server/settings/components/: main.py
server/templates/base/: base.html
server/templates/base/partials/: footer.html  header.html
