[project]
name = "blog"
version = "0.1.0"
description = ""
authors = [
    {name = "AleksandrZhukovin",email = "sashokzuk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "django-split-settings (>=1.3.2,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pillow (>=11.3.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
